

  Giada - Your Hardcore Loopmachine.

  Developed by Monocasual Laboratories

  www.giadamusic.com

  CHANGELOG
--------------------------------------------------------------------------------


0.16.4 ---
- Support for mono inputs
- Disable record-on-signal mode when sequencer is running
- Fix wrong sample rate conversion when project rate != system rate 


0.16.3 --- 2020 . 06. 15
- Non-virtual Channels architecture
- Added G_DEBUG macro
- Optimized CPU usage when playing with many channels
- Increased UI refresh rate to 30 frames per second
- Improved quantizer precision
- Simplified behavior when halting channels containing recorded actions 
- Fix wrong audio sample looping with pitch != 1.0
- Fix MIDI input master values not stored on quit
- Fix One-shot press channel mode not working via mouse 
- Fix Action recording overlap (both live and via Action Editor)
- Fix crash when loading a project with missing audio files
- Fix BPM not changing via Jack


0.16.2 --- 2020 . 02 . 18
- Switch to Json for modern C++ library for reading and writing Json data
- Resizable channels, improved version
- Drop support for raw patches (still readable for backward compatibility)
- Simplify global configuration parameters
- Simplify column data storage in patch files
- Center all micro-subwindows to screen
- Revamped MIDI learning algorithm and related UI components
- Always display 'R' button in Sample Channel
- Don't download external files for unit tests
- Optimized UI drawings for base buttons
- Move build info from 'About' window to console log
- Update RtAudio to 5.1.0
- Fix crash during audio recording after opening a project (thanks AdTb!)


0.16.1 --- 2020 . 01 . 08
- FreeBSD support
- Ability to remove empty columns manually
- Gray out bpm value when in JACK client mode
- 'Reset to init state' becomes 'close project' under File menu
- [Linux] Upgrade Travis CI Linux machine to Xenial
- Add namespaces to file system and logging functions 