@@ -15,6 +15,8 @@
 - Support for mono inputs
 - Disable record-on-signal mode when sequencer is running
 - Fix wrong sample rate conversion when project rate != system rate 
+- Fix Wrong begin/end sample markers when loading a project with 
+  samplerate != system.samplerate 
 
 
 0.16.3 --- 2020 . 06. 15
